<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/question_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/address_newAddress"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checkedButton="@+id/radio_home"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <RadioButton
                    android:id="@+id/radio_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_residential" />

                <RadioButton
                    android:id="@+id/radio_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_company" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personAddress"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_name"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personNumber"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_number"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personComplement"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_complement"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personNumber" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personNeighborhood"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_neighborhood"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personComplement" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personCity"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_city"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personNeighborhood" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personZipCode"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_zipCode"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personCity" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/personUf"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/address_state"
                android:textColor="@color/colorBlack"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personZipCode" />

            <Button
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/address_register"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personUf" />


            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="#DCD9D9"
                android:text="@string/address_back"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="14sp"
                app:cornerRadius="13dp"
                app:layout_constraintBottom_toBottomOf="@+id/okBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/okBtn"
                app:layout_constraintTop_toTopOf="@+id/okBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>