<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checkedButton="@+id/radio_person"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radio_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_title_person" />

                    <RadioButton
                        android:id="@+id/radio_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_title_person_company" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/personPhone"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/details_title_phone"
                    android:textColor="@color/colorBlack"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/personMail"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/details_title_email"
                    android:textColor="@color/colorBlack"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personPhone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/personName"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/details_title_name"
                    android:textColor="@color/colorBlack"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personMail" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/personCpf"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/details_title_cpf"
                    android:textColor="@color/colorBlack"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/personCNPJ"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/details_title_cnpj"
                    android:textColor="@color/colorBlack"
                    android:visibility="gone"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personMail" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/personCorporateName"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/details_title_corporateName"
                    android:textColor="@color/colorBlack"
                    android:visibility="gone"
                    app:fontFamily="sans-serif-condensed-medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personCNPJ" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/details_title_registration_address"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personCpf" />

                <Button
                    android:id="@+id/btnCreateAddress"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="30dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="141dp"
                    android:text="@string/details_title_more"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/title"
                    app:layout_constraintTop_toTopOf="@+id/title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_address" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/details_title_register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>